# pyacoustics-tl-stc

./: .gitignore  Action.py  Double.py  DoublePanel.py  Pipfile  README.md  Requirement.py  Show.py  SinglePanel.py  SinglePanel_A  SinglePanel_A.py  SinglePanel_B.py  double_panel_run.py  graph.py  lint-config.yaml  main.py  mock_graph.py  pyproject.toml  requirements.txt  single_panel.py  single_panel_run.py  test_double_panel.py  test_single_panel.py
.github/workflows/: lint.yaml
Double Panel/: Action.py  DoublePanel.py  SinglePanel_B.py
double_panel/: doublePanel.py  plot.py  run.py
model_tl_stc/: double_panel.py  single_panel.py
