[tool.poetry]
name = "pyacoustics-tl-stc"
version = "0.1.0"
description = "The STC/TL acoustics prediction as Python library"
authors = ["bozzlab <bozzsrinikorn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = " >=3.7,<3.9"
pydantic = "^1.8.2"
black = "^21.9b0"
numpy = "^1.21.2"
pyflakes = "^2.3.1"
mypy = "^0.910"
prospector = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
numpy = "^1.21.2"
pydantic = "^1.8.2"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
